*Empty MediaWiki Message*

--- a/Neo_FreeRunner_Hardware_Issues.mw
+++ b/Neo_FreeRunner_Hardware_Issues.mw
@@ -68,26 +68,6 @@ Status: Under investigation. Please add your information to [[FreeRunner_unable_
 
 Workarounds: It may be possible to obtain a different model of SIM from your GSM carrier.
 
-==== Empty NOR Flash ====
-
-Issue: NOR flash (backup copy of u-boot) is not programmed. [http://docs.openmoko.org/trac/ticket/1568 #1568]
-
-Affects: Unknown - maybe only 1 or 2 devices? Also need to confirm that the bug report was from a mass-production unit rather than an earlier prototype.
-
-Status: Solved. The new devices are tested better if they have the NOR flashed programmed and aren't shipped if the test fail.
-
-Workarounds: Use the NAND copy of u-boot and be careful not to brick the device unless a debug-board is available.
-
-==== Debug board has wrong vendor/product ID ====
-
-Issue: A debug board is not reporting the expected USB Vendor/Product ID.
-
-Affects: Only [http://lists.openmoko.org/pipermail/device-owners/2008-July/001775.html one report] has been seen so far.
-
-Status: Unknown
-
-Workarounds: Edit configuration files (e.g. openocd.conf) to use the IDs that the board is reporting.
-
 === Known/Accepted Issues ===
 
 This section lists items that are acknowledged as being less than ideal, but are considered to be acceptable in the shipping product. They will not be discussed in detail on this page.
@@ -106,3 +86,25 @@ These are issues that have been discussed in the past, but have been fixed (or t
 * Battery life - At this time it appears that the Freerunner battery life will be acceptable once suspend/resume support has been implemented in software.
 * slow GPS TTFF - see [[GPS Problems]]
 [[Category:GTA02 Hardware]]
+
+
+==== Empty NOR Flash ====
+
+Issue: NOR flash (backup copy of u-boot) is not programmed. [http://docs.openmoko.org/trac/ticket/1568 #1568]
+
+Affects: Unknown - maybe only 1 or 2 devices? Also need to confirm that the bug report was from a mass-production unit rather than an earlier prototype.
+
+Status: Solved. The new devices are tested better if they have the NOR flashed programmed and aren't shipped if the test fail.
+
+Workarounds: Use the NAND copy of u-boot and be careful not to brick the device unless a debug-board is available.
+
+
+==== Debug board has wrong vendor/product ID ====
+
+Issue: A debug board is not reporting the expected USB Vendor/Product ID.
+
+Affects: Only [http://lists.openmoko.org/pipermail/device-owners/2008-July/001775.html one report] has been seen so far.
+
+Status: Probably a single case scenario.
+
+Workarounds: Edit configuration files (e.g. openocd.conf) to use the IDs that the board is reporting.
