*Empty MediaWiki Message*

--- a/Getting_Started_with_your_Neo_FreeRunner.mw
+++ b/Getting_Started_with_your_Neo_FreeRunner.mw
@@ -111,7 +111,7 @@ Holding the Aux button brings up a menu allowing you to:
 </tr>
 </table>
 
-Booting time is 2 about minutes overall, so patience is in order. The longest step comes after the Linux boot messages in very small fonts have scrolled by, at the graphical "openmoko" sunrise page.
+[[Booting the Neo FreeRunner]] takes about 2 minutes overall, so patience is in order. The longest step comes after the Linux boot messages in very small fonts have scrolled by, at the graphical "openmoko" sunrise page.
 
 The phone jack is a 2.5mm connector with four contacts: stereo + MIC. It is compatible with the headsets used by Motorola smartphones (A780,A1200, ...) and the V-360.
 
