added bike chargers

--- a/Biking.mw
+++ b/Biking.mw
@@ -16,6 +16,17 @@ The alternative is to steal energy from the crank. You can do this with a hub dy
 
 The regulator will have to be a do-it-yourself project regardless of the power source. See [http://www.iki.fi/~msmakela/electronics/dynamo5v/] for one approach. If you do want to try this with a switching regulator, there's a nice little pre-built module in the form factor of a linear regulator that should pop right in: [http://www.dimensionengineering.com/DE-SW050.htm]
 
+== Charging via hub ==
+Connecting a hub ("Nabendynamo" [http://nabendynamo.de/]) like the SON [http://www.peterwhitecycles.com/schmidt.asp] to a self-made or prebuilt charger could supply your device while biking.
+
+=== pre-built chargers ===
+* Zzing [http://zzing.de/English_Zzing/]
+* JaWeTec Bike Charger [http://www.jawetec.de/index.php?content=bikecharger&framing=radsport]
+
+=== self-made chargers ===
+* Article (German) in c't 23/2007, page 190 [http://www.heise.de/kiosk/archiv/ct/07/23/190]
+* maybe 6V "Forumslader" [http://www.forumslader.de/6V-Version-des-Rad-Forum-Ladegeraets.125.0.html]
+
 == Software for biking ==
 
 * [[TangoGPS]]
