--- a/Users_Repositories.mw
+++ b/Users_Repositories.mw
@@ -10,6 +10,19 @@ To add the unstable Angstrom feed, update your ''/etc/opkg/base-feeds.conf'' to 
 src/gz base http://www.angstrom-distribution.org/feeds/2007/ipk/glibc/armv4t/base/
 </pre>
 
+==== Om 2008.8 ====
+
+On Om 2008.8, run the following commands from the Neo:
+
+  echo "arch base 50" > /etc/opkg/angstrom-feed.conf
+  echo "src/gz base http://www.angstrom-distribution.org/feeds/2008/ipk/glibc/armv4t/base/" >> /etc/opkg/angstrom-feed.conf
+
+This repository contains the following useful packages:
+
+* Pidgin - Instant Messaging.  Can connect to MSN, Google Talk, Yahoo, ICQ with additional plugins
+* [[Minimo]] - Web Browsing.  AJAX capable, based on the Gecko rendering engine
+* [[Navit]] - Car Navigation with Routing Engine
+
 ===[[User:ChooseOpen|ChooseOpen]]===
 :http://chooseopen.com/openmoko/build/2007.2/?M=D (2007.2)
 :http://chooseopen.com/openmoko/build/qtopia/?M=D (Qtopia)
