Added links to schematic and board layout PDFs

--- a/Neo_FreeRunner_Hardware.mw
+++ b/Neo_FreeRunner_Hardware.mw
@@ -5,6 +5,8 @@ This is the detailed list of the hardware components used in Neo FreeRunner (dev
 
 If you are looking for general hardware overview please look at the [[Neo FreeRunner]] page.
 
+Board layout [http://downloads.openmoko.org/schematics/GTA02/Component-placement_Freerunner-GTA02-MB-A6.pdf] and schematics [http://downloads.openmoko.org/schematics/GTA02/Schematics_Freerunner-GTA02_A5-A7cumulative_public_RC0.pdf] for GTA02 have been published, PDF format.
+
 See also the [[Neo FreeRunner GTA02 Hardware Requirements]] used in making these component selections.
 
 == Photos ==
