--- a/Neo_FreeRunner_Hardware.mw
+++ b/Neo_FreeRunner_Hardware.mw
@@ -140,7 +140,7 @@ Smedia Glamo 3362.
 * Data sheet: This is not available, as it is under NDA. It will likely never be available. (Source: Raster - IRC). There is hope that the glamo chip features may be usable even without a NDA, see [http://unadventure.wordpress.com/2008/06/08/accelerating-in-my-pocket/ the hack here]
 * Connected to: S3C2442 Address/Data bus <br>
 
-=== microSD ===
+== microSD ==
 The GTA02 has one microSD aka Transflash slot. Using the Glamo 3362 MMC/SD controller
 
 *It should support SDHC, and 4GB card has been tested. Anyone with 8GB card? MicroSD slot is [[Disassembling_Neo1973#Opening_back_cover|under battery]].
