added test report of known to be working adapter

--- a/Headset.mw
+++ b/Headset.mw
@@ -14,6 +14,21 @@ tip = mic electret condenser type, to ground.
       (+HoldButton shortcircuit to ground)
 </nowiki></pre>
 
+== Known working adapters ==
+
+{|cellspacing="5" 
+!align="left"| Tester
+!align="left"| Product
+!align="left"| Seller
+!align="left"| Used with
+|-
+| [[User:TimoJyrinki|TimoJyrinki]]
+| MP35A
+| [http://pc-mobile.net/audioadapter.htm pc-mobile.net]
+| Koss KSC-35 headphones, Altec Lansing inMotion iM4 speakers and car audio via AUX - all work great.
+|-
+|}
+
 ==Test Scope==
 To test Headset functionality
 
