*Empty MediaWiki Message*

--- a/Samsung_S3C2442B_B54.mw
+++ b/Samsung_S3C2442B_B54.mw
@@ -6,4 +6,9 @@
 * Built-in 256 MB NAND
 * Evaluation board: [http://www.meritech.co.kr/products/product_view.php?num=52 S3C2442 EVB]
 
+
+== Neo FreeRunner ==
+* Running at 400 MHz
+* GPIO Assignments: https://svn.openmoko.org/trunk/doc/hardware/GTA02v4/gpio.txt
+
 [[Category:Chip]]
