--- a/NXP_PCF50633.mw
+++ b/NXP_PCF50633.mw
@@ -5,5 +5,5 @@
 **Datasheet/User manual usage  [http://lists.openmoko.org/pipermail/community/2008-March/013898.html was legally authorized by NXP]
 
 ==Neo FreeRunner==
-* Connected to: S3C2442 via I2C, client address is 0x08. <br>
+* Connected to: [[S3C2442]] via I2C, client address is 0x08. <br>
 * Driver Source: https://svn.openmoko.org/trunk/src/target/kernel/patches/pcf50633.patch<br>
