add a note about the improving the low-frequency output

--- a/Headset.mw
+++ b/Headset.mw
@@ -29,6 +29,10 @@ tip = mic electret condenser type, to ground.
 |-
 |}
 
+== Audio quality ==
+
+You probably want to fix mixer settings to overcome the poor low-frequency output, see [[Freerunner Hardware Issues#Known.2FAccepted_Issues|Freerunner Hardware Issues]] for instructions.
+
 ==Test Scope==
 To test Headset functionality
 
