--- a/Samsung_S3C2442B_B54.mw
+++ b/Samsung_S3C2442B_B54.mw
@@ -3,7 +3,7 @@
 * Core: ARM920T
 * Instruction Set: ARMv4
 * Built-in 64MB SDRAM
-* Built-in 256 MB NAND
+* Built-in 256 MB NAND connected to the S3C2442 NAND controller
 * Evaluation board: [http://www.meritech.co.kr/products/product_view.php?num=52 S3C2442 EVB]
 
 
