/* Known working adapters */ more description of the sound

--- a/Headset.mw
+++ b/Headset.mw
@@ -20,12 +20,12 @@ tip = mic electret condenser type, to ground.
 !align="left"| Tester
 !align="left"| Product
 !align="left"| Seller
-!align="left"| Used with
+!align="left"| How it works
 |-
 | [[User:TimoJyrinki|TimoJyrinki]]
 | MP35A
 | [http://pc-mobile.net/audioadapter.htm pc-mobile.net]
-| Koss KSC-35 headphones, Altec Lansing inMotion iM4 speakers and car audio via AUX - all work great.
+| Koss KSC-35 headphones, Altec Lansing inMotion iM4 speakers and car audio via AUX - all work great, if the mixer settings are changed like guided below. One can notice the lack of real quality sound with the headphones, but it's mostly fine for any casual listening. Definitely the output is not ideal/natural because of the high-pass filtering effect from the hardware issue and then artificially boosting low frequencies to compensate.
 |-
 |}
 
