--- a/ST_M58WR016KB706E.mw
+++ b/ST_M58WR016KB706E.mw
@@ -2,5 +2,5 @@
 * Data Sheet: [http://www.st.com/stonline/products/literature/ds/13023/m58wr032qb.pdf M58WR016]
 
 == Neo FreeRunner ==
-* Connected to: [[Samsung S3C2442]] NAND controller
+* Connected to: [[Samsung S3C2442B B54]] NAND controller
 * Used for 'unbrickable emergency boot' feature
