--- a/Neo_FreeRunner_Hardware.mw
+++ b/Neo_FreeRunner_Hardware.mw
@@ -57,44 +57,22 @@ Image:SimpleComponentDiagram.jpg|Simplified Hardware Component Diagram
 
 == Main components ==
 === Processor ===
-The main Processor (CPU) is a [[Samsung S3C2442B B54]] (running at 400 MHz)
-
-GPIO Assignments: https://svn.openmoko.org/trunk/doc/hardware/GTA02v4/gpio.txt
-
-{{:Samsung S3C2442B B54}}
+The main Processor (CPU) is a [[Samsung S3C2442B B54]]
 
 === Power Management ===
-A NXP PCF50633 04 N3 is used for [[Neo1973_Power_Management|power management]].
-
-* NXP PMU index: [http://www.nxp.com/products/power_management/pmu/index.html NXP PMU index page]<br>
-* Product Datasheet: [http://people.openmoko.org/tony_tu/GTA02/datasheet/PMU/PCF50633DS_02.pdf NXP PCF50633 Product Data Sheet]<br>
-* Product User manual: [http://people.openmoko.org/tony_tu/GTA02/datasheet/PMU/PCF50633UM_6.pdf NXP PCF50633 User Manual]<br>
-**Special thanks NXP provide full user manual and support openness for all developer
-**Datasheet/User manual usage  [http://lists.openmoko.org/pipermail/community/2008-March/013898.html was legally authorized by NXP]
-* Connected to: S3C2442 via I2C, client address is 0x08. <br>
-* Driver Source: https://svn.openmoko.org/trunk/src/target/kernel/patches/pcf50633.patch<br>
+A [[NXP PCF50633]] 04 N3 is used for [[Neo1973_Power_Management|power management]].
 
 === Flash ===
 ==== NAND Flash ====
-256MB integrated Samsung NAND flash inside the 2442 multi-chip package, attached to the S3C2442 NAND controller
-
-* Product Homepage: [http://www.samsung.com/global/business/semiconductor/productInfo.do?fmly_id=229&partnum=SC32442 S3C2442]
-* Data Sheet: S3C2442 B54 comes with 256 MB NAND MCP package
-* Connected to: S3C2442 NAND controller<br>
+256MB integrated into the [[Samsung S3C2442B B54]]
 
 ==== NOR Flash ====
-
-16MBit ST M58WR016KB706E NOR flash for 'unbrickable emergency boot' feature.
-
-* Product Homepage: [http://www.st.com/stonline/products/families/memories/fl_nor_mob/index.htm ST Mobile Flash NOR/Mobile Terminal]
-* Data Sheet: [http://www.st.com/stonline/products/literature/ds/13023/m58wr032qb.pdf M58WR016]
-* Connected to: S3C2442 NAND controller<br>
+16MBit [[ST M58WR016KB706E]] NOR flash for 'unbrickable emergency boot' feature.
 
 === SDRAM ===
-128MB SDRAM (64MB inside 2442 MCP, 1x Samsung K4M51323PC) attached to S3C2442 SDRAM controller
-* Product Homepage: [http://www.samsung.com/global/business/semiconductor/productInfo.do?fmly_id=136&partnum=K4M51323PC Samsung K4M51323PC]
-* Data Sheet: [http://www.samsung.com/global/system/business/semiconductor/product/2007/6/11/MobileSDRAM/MobileSDRSDRAM/512Mbit/K4M51323PC/ds_k4m51323pc.pdf Samsung K4M51323PC]
-* Connected to: S3C2442 <br>
+*64MB integrated into the [[Samsung S3C2442B B54]]
+*64MB from the [[Samsung K4M51323PC]]
+*Total of 128MB
 
 == GSM/GPRS ==
 The [[GSM]] (including GPRS) modem is Texas Instruments Calypso based.
