*Empty MediaWiki Message*

--- a/NXP_PCF50633.mw
+++ b/NXP_PCF50633.mw
@@ -1,3 +1,4 @@
+* Function: Power Management
 * NXP PMU index: [http://www.nxp.com/products/power_management/pmu/index.html NXP PMU index page]<br>
 * Product Datasheet: [http://people.openmoko.org/tony_tu/GTA02/datasheet/PMU/PCF50633DS_02.pdf NXP PCF50633 Product Data Sheet]<br>
 * Product User manual: [http://people.openmoko.org/tony_tu/GTA02/datasheet/PMU/PCF50633UM_6.pdf NXP PCF50633 User Manual]<br>
