*Empty MediaWiki Message*

--- a/Samsung_S3C2442B_B54.mw
+++ b/Samsung_S3C2442B_B54.mw
@@ -1,3 +1,4 @@
+* Feature: Processor
 * Product Homepage: [http://www.samsung.com/global/business/semiconductor/productInfo.do?fmly_id=229&partnum=SC32442 Samsung SC32442B]
 * User Manual: [http://210.118.57.197/Products/Semiconductor/MobileSoC/ApplicationProcessor/ARM9Series/SC32442/um_s3c2442b_rev12.pdf Samsung SC32442B]
 * Core: ARM920T
@@ -8,6 +9,7 @@
 
 
 == Neo FreeRunner ==
+{{Main|Neo_FreeRunner_GTA02_Hardware}}
 * Running at 400 MHz
 * GPIO Assignments: https://svn.openmoko.org/trunk/doc/hardware/GTA02v4/gpio.txt
 
