*Empty MediaWiki Message*

--- a/Samsung_S3C2442B_B54.mw
+++ b/Samsung_S3C2442B_B54.mw
@@ -1,4 +1,4 @@
-* Feature: Processor
+* Feature: Processor + 64MB SDRAM + 256MB NAND
 * Product Homepage: [http://www.samsung.com/global/business/semiconductor/productInfo.do?fmly_id=229&partnum=SC32442 Samsung SC32442B]
 * User Manual: [http://210.118.57.197/Products/Semiconductor/MobileSoC/ApplicationProcessor/ARM9Series/SC32442/um_s3c2442b_rev12.pdf Samsung SC32442B]
 * Core: ARM920T
