--- a/ST_M58WR016KB706E.mw
+++ b/ST_M58WR016KB706E.mw
@@ -1,6 +1,8 @@
+* Feature: 16MBit NOR Flash
 * Product Homepage: [http://www.st.com/stonline/products/families/memories/fl_nor_mob/index.htm ST Mobile Flash NOR/Mobile Terminal]
 * Data Sheet: [http://www.st.com/stonline/products/literature/ds/13023/m58wr032qb.pdf M58WR016]
 
 == Neo FreeRunner ==
+{{Main|Neo_FreeRunner_GTA02_Hardware}}
 * Connected to: [[Samsung S3C2442B B54]] NAND controller
 * Used for 'unbrickable emergency boot' feature
