--- a/Samsung_K4M51323PC.mw
+++ b/Samsung_K4M51323PC.mw
@@ -1,5 +1,7 @@
+* Feature: 64MB SDRAM
 * Product Homepage: [http://www.samsung.com/global/business/semiconductor/productInfo.do?fmly_id=136&partnum=K4M51323PC Samsung K4M51323PC]
 * Data Sheet: [http://www.samsung.com/global/system/business/semiconductor/product/2007/6/11/MobileSDRAM/MobileSDRSDRAM/512Mbit/K4M51323PC/ds_k4m51323pc.pdf Samsung K4M51323PC]
 
 == Neo FreeRunner ==
+{{Main|Neo_FreeRunner_GTA02_Hardware}}
 * Connected to: [[Samsung S3C2442B B54]]
