--- a/Neo_FreeRunner_Hardware.mw
+++ b/Neo_FreeRunner_Hardware.mw
@@ -74,29 +74,11 @@ A [[NXP PCF50633]] 04 N3 is used for [[Neo1973_Power_Management|power management
 *64MB from the [[Samsung K4M51323PC]]
 *Total of 128MB
 
-== GSM/GPRS ==
-The [[GSM]] (including GPRS) modem is Texas Instruments Calypso based.
+== GSM modem ==
+The [[GSM]] modem is Texas Instruments Calypso based, probably [[TI Calypso D751992AZHH]].
 
-* Connected to: S3C2442 UART1 (full-uart, RxD, TxD, CTS, RTS), /dev/ttySAC0 in userspace
-* PM Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-power_control.patch
-* [[External GSM Antenna|Accessible GSM/GPRS antenna jack]] (if battery cover is removed) - MURATA MM8430-2610RB3 SMD RF TEST PORT. FOr compatible adapter see Murata part no. MXHS83QE3000<br>
-
-=== CALYPSO ASIC digital baseband ===
-Unfortunately we cannot provide many details on the GSM chipset due to very tight [http://en.wikipedia.org/wiki/Non-disclosure_agreement NDA]s.  However, this is not neccessarily required, since it interfaces using a standard UART serial line with the S3C2442.  On that interface, [http://www.3gpp.org/ftp/Specs/archive/07_series/07.05/ GSM 07.05], [http://www.3gpp.org/ftp/Specs/archive/07_series/07.10/ GSM 07.10] and other standardized protocols are used.
-
-The NDAd documentation for the calypso, [http://cryptome.org/ti-calypso1.pdf register definition ] and [http://cryptome.org/ti-calypso2.pdf hardware definition ] was leaked onto a public forum on the 4th of March by persons or persons unknown.
-The legality of reading these files may vary according to your local laws, as may generating code from them.
-
-
-*Calypso D751992AZHH<br>
-*The firmware within GTA02 should be moko6 or later (internal code name)
-
-=== TI TWL3025BZGMR analog baseband ===
-*Product Homepage: [http://focus.ti.com/general/docs/wtbu/wtbuproductcontent.tsp?templateId=6123&navigationId=12295&contentId=4703 TWL3014]<br>
-
-=== TI TRF6151 (GSM/PCS) RF Transceiver ===
-*Product Homepage: [http://focus.ti.com/general/docs/wtbu/wtbuproductcontent.tsp?templateId=6123&navigationId=12296&contentId=4701 TRF6151] <br>
-GPRS Class12/CS4 <br>
+== GPRS model ==
+The [[GPRS]] modem is Texas Instruments Calypso based, probably [[TI Calypso D751992AZHH]].
 
 == AGPS ==
 [[u-blox ANTARIS 4 ATR0635]] chip
