--- a/TI_Calypso_D751992AZHH.mw
+++ b/TI_Calypso_D751992AZHH.mw
@@ -6,7 +6,8 @@ The legality of reading these files may vary according to your local laws, as ma
 
 ==Neo FreeRunner==
 {{Main|Neo_FreeRunner_GTA02_Hardware}}
-* Connected to: S3C2442 UART1 (full-uart, RxD, TxD, CTS, RTS), /dev/ttySAC0 in userspace
+* Connected to: Samsung S3C2442B B54 UART1 (full-uart, RxD, TxD, CTS, RTS), 
+* Connected to (userspace): /dev/ttySAC0
 * PM Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-power_control.patch
 * [[External GSM Antenna|Accessible GSM/GPRS antenna jack]] (if battery cover is removed) - MURATA MM8430-2610RB3 SMD RF TEST PORT. FOr compatible adapter see Murata part no. MXHS83QE3000<br>
 *Calypso D751992AZHH<br>
