--- a/U-blox_ANTARIS_4_ATR0635.mw
+++ b/U-blox_ANTARIS_4_ATR0635.mw
@@ -1,6 +1,12 @@
+* Feature: GPS + AGPS
 * [http://www.u-blox.com/products/atr0635.html u-blox ATR0635 product page]
 * Driver: none needed, talks standard NMEA
 * u-blox ANTARIS 4 Protocol [http://www.u-blox.com/customersupport/antaris_doc.html Protocol download page]
 * [http://www.u-blox.com/products/Data_Sheets/ATR0630_35_SglChip_Data_Sheet(GPS.G4-X-06009).pdf u-blox ATR0635 Datasheet]
+
+== Neo FreeRunner ==
+{{Main|Neo_FreeRunner_GTA02_Hardware}}
+* Connected to: [[Samsung S3C2442B B54]] UART2, 
+* Connected to (userspace): /dev/ttySAC1
 
 [[Category:Technical]]
