--- a/Neo_FreeRunner_Hardware.mw
+++ b/Neo_FreeRunner_Hardware.mw
@@ -80,10 +80,8 @@ The [[GSM]] modem is Texas Instruments Calypso based, probably [[TI Calypso D751
 == GPRS model ==
 The [[GPRS]] modem is Texas Instruments Calypso based, probably [[TI Calypso D751992AZHH]].
 
-== AGPS ==
+== GPS + AGPS ==
 [[u-blox ANTARIS 4 ATR0635]] chip
-* Connected to: S3C2442 UART2, /dev/ttySAC1 in userspace
-{{:u-blox ANTARIS 4 ATR0635}}
 
 == Accelerometers ==
 Two ST LIS302DL
