*Empty MediaWiki Message*

--- a/Smedia_Glamo_3362.mw
+++ b/Smedia_Glamo_3362.mw
@@ -1,7 +1,15 @@
-* Feature: Graphics/3D Acceleration
+* Feature: Graphics/3D Acceleration + MicroSD support
 * Homepage: http://www.smediatech.com/product3362.htm
 * Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/smedia-glamo.patch
 * Data sheet: This is not available, as it is under NDA. It will likely never be available. (Source: Raster - IRC). There is hope that the glamo chip features may be usable even without a NDA, see [http://unadventure.wordpress.com/2008/06/08/accelerating-in-my-pocket/ the hack here]
+
+== microSD support ==
+* It should support SDHC, and 4GB card has been tested. Anyone with 8GB card?.
+* Connected to: Glamo 3362 MMC/SD controller
+* Driver: Check svn for the SMedia driver with SD implementation
+* [[Supported microSD cards]]
+* Specifications: [http://www.sdcard.org/about/memory_card/pls/ SD Simplified Specification], [http://www.mmca.org/compliance/buy_spec/AN_MMCA050419.pdf MMC (partial)], [http://www.sandisk.com/Assets/File/OEM/Manuals/manual-rs-mmcv1.0.pdf MMC (product manual)]
+* SANDISK 128 MB/512 MB and some 4G SDHC card been verified could work on GTA02<br>
 
 ==Neo FreeRunner==
 {{Main|Neo_FreeRunner_GTA02_Hardware}}
