*Empty MediaWiki Message*

--- a/WM8753.mw
+++ b/WM8753.mw
@@ -1,10 +1,21 @@
+* Feature: sound card
+* Product Homepage: http://www.wolfsonmicro.com/products/WM8753/
+* Data Sheet: [http://www.wolfsonmicro.com/uploads/documents/en/WM8753.pdf WM8753.pdf]
+* Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/asoc.patch
+
+== Neo FreeRunner ==
+* Connected to: [[Samsung S3C2442B B54]] IIS interface (PCM data), [[Samsung S3C2442B B54]] I2C (Control)
+
+== Neo 1973 ==
+* Connected to: [[Samsung S3C2410AL-26]] IIS interface (PCM data), [[Samsung S3C2410AL-26]] I2C (Control)
+
 '''WM8753''' (also the '''Wolfson Codec''') is the "sound card" chip in the [[Neo1973 audio subsystem]]. It has a stereo ADC for recording and a stereo DAC for playback, plus a mono "voice" DAC.
 
 It's connected to the [[S3C2410]] IIS interface for PCM "hi-fi" data, and to the S3C2410 [[I2C]] interface for control. The PCM "voice" input and output is connected to the [[Bluetooth]] chip. The stereo output ("Audio Out": LOUT1 and ROUT1) is connected to [[LM4857]] stereo input (LIN and RIN) for amplification. MONO1 and MONO2 form "GSM Line Out"; RXP and RXN form "GSM Line In". MIC1 is "Headset Mic", and MIC2 is "Call Mic".
 
 The following output pins are not connected: LOUT2 and ROUT2, OUT3, OUT4. The following input pins are not connected: LINE1, LINE2.
 
-== Routing ==
+=== Routing ===
 
 http://wolfson.co.uk/uploads/images/en/WM8753_BlockDiagram.gif
 
@@ -36,7 +47,7 @@ There are several sources connected via switches that can cut each source out:
  VXD: digital PCM to BT (mono only?)
  DACDAT, ADCDAT: to cpu via IIS
 
-=== Neo modes ===
+==== Neo modes ====
 
 * Off: all off.
 * GSM Handset: only "Headset Mic" off.
@@ -48,12 +59,12 @@ There are several sources connected via switches that can cut each source out:
 * Capture Headset: only "Headset Mic" on.
 * Capture Bluetooth: all off.
 
-== See also ==
+=== See also ===
 
 * [[Neo1973 audio subsystem]]
 * [[Neo1973 hardware]]
 
-== External links ==
+=== External links ===
 
 * [http://www.wolfsonmicro.com/products/WM8753/ The Wolfson Microelectronics page about WM8753]
 
