/* Using gpsd with a network connection */

--- a/Neo_FreeRunner_GPS.mw
+++ b/Neo_FreeRunner_GPS.mw
@@ -71,6 +71,10 @@ First be sure you have gpsd installed. Some Neo Freerunner images don't have gps
 
 Tested with RoadNav. Works great!
 
+Another way is to forward gpsd on the neo. If '192.168.0.202' is your neo, then run "ssh -L 2947:localhost:2947 root@192.168.0.202" on the host.
+
+Tested and works with roadnav, gpsdrive, and tangogps on the host computer. [[User:Sargas|Sargas]] 21:52, 16 August 2008 (UTC)
+
 If you have an unlimited [[GPRS]] data package you could make your gpsd service accessible over the Internet. This opens up many possibilities. For example, you could implemented AVL (Automatic Vehicle Location) by having a web server somewhere query your gpsd server for your position and write it to a KML file which would then display your location on a Google map.
 
 === Bluetooth GPS relay ===
