--- a/Neo_FreeRunner_Hardware.mw
+++ b/Neo_FreeRunner_Hardware.mw
@@ -146,30 +146,13 @@ Please see [[I2C | Neo I2C Devices]] for more information & a list of devices & 
 | [[LM4853]]
 |- 
 | style='vertical-align:top' | &nbsp;&nbsp; Analog wired Headset
-| There's a four-ring 2.5mm stereo jack which provides connectivity to old-fashioned wired headsets.
-
-The headsets used by Motorola smartphones (A780,A1200, ...) and the V-360 have a compatible configuration.
-
-ring<br>
-1(base): GND<br>
-2: right out<br>
-3: left out<br>
-4(tip): mic + HOLD-button(press:short to GND)
+| [[Neo FreeRunner Analog wired Headset]] 
 |- 
 | style='vertical-align:top' | Buttons 
 | [[Neo1973 Power Button|The Power Button]] <br> [[Neo1973 AUX Button|The "Aux" button]]
 |- 
 | style='vertical-align:top' | Case
-|
-The case for the FreeRunner is all black, as seen on the front page of the wiki.
-
-Openmoko has released the CAD files for the case schematics for the Openmoko [[Neo1973]] (GTA01) and Neo FreeRunner. These are available in the original Pro/E (.asm/.prt) format and alternative formats created from the originals.
-
-We welcome your assistance in providing other formats. If you are able to convert CAD files from Pro/E format to other formats, please contact [mailto:michael@openmoko.org]. We are especially interested in the DXF format and in images rendered from these files.
-
-* [http://downloads.openmoko.org/CAD/NeoFreerunner_ProE.zip The original Pro/E (.asm/.prt) format]
-
-[http://downloads.openmoko.org/CAD/ Browse CAD directory]
+| [[Neo FreeRunner case]]
 |}
 
 =Accessory=
