*Empty MediaWiki Message*

--- a/Openmoko_Local_Groups:_London.mw
+++ b/Openmoko_Local_Groups:_London.mw
@@ -9,7 +9,7 @@ Beer and Neo anyone?
 !Location
 !Device owned
 |-
-|[[User:jptmoore|John Moore]]
+|[[User:jptmoore|John Moore]] (zedstar)
 |C/Scheme
 |Application development
 |Pinner
