--- a/HXD8.mw
+++ b/HXD8.mw
@@ -2,6 +2,9 @@
 like FIC is going to develop another device for OpenMoko quite soon, with the (code)name <b>HXD8</b>. On May 26th 2007  (GMT)  Sean [http://lists.openmoko.org/pipermail/community/2007-May/005407.html confirmed] the existence of the device, said hardware support was almost done and cleverly told us to wait anxiously. 
 
 According to [http://lists.openmoko.org/pipermail/community/2007-October/011324.html this post] the device is a networked collaborative automotive GPS unit, from http://dash.net/ .
+
+It has been confirmed that the DE is an HXD8
+
 {| style="background-color:#EFEFFF;color:#000;border:1px solid #9F9FFF;margin:1em 5% 1em 5%;"
 | style="padding:0.5em 0.5em;" |
 | style="padding:0.5em 0.5em;" | <b>Speculations:</b> This {{{1|article or section}}} documents a device that is <i>not yet confirmed</i> formally and the device (if even released) <i>may differ</i> from the specifications given here. This page is based on well educated guesses, not facts. 
@@ -16,6 +19,8 @@ According to https://svn.openmoko.org/trunk/src/target/kernel/patches/s3c2440-na
 
 ===Flash===
 According to a currently available hardware patch, the device supports 1 NAND Flash device of up to 4G. (uncertain about what kind of G that is. Could be 4Gb (which makes about 0,5GB), could be 4GB). 
+
+The DE has 3G of Flash.
 
 Some other patch implies that there is the possibility of connecting 3 NAND Flash chips.
 
