--- a/Carriers%2FATT.mw
+++ b/Carriers%2FATT.mw
@@ -35,6 +35,8 @@ for AT+COPS
 |-
 | 71234 || G || 3022 || blazing 3G fireball || libgsmd -m shell; CME Error: 32 
 |-
+| 71234 || G || 3022 || blazing 3G fireball || Does not register, suspect mis-aligned pins [http://s292.photobucket.com/albums/mm27/SchadowScythe/?action=view&current=3gFireball.png Screenshot]
+|-
 | 71234 || O || 4021 || blazing 3G fireball ||
 |-
 | 73000 || O || 4021 || blazing 3G fireball || This sim will not work for me, although a user has gotten it to work below.  Those steps only produce CME ERROR 13, regardless of amount of waiting.
@@ -54,6 +56,8 @@ for AT+COPS
 | 63698 || A  ||  1003 || 64K smartchip || Returns proper info with at+cimi 
 |-
 | 63698 || G  ||  3003 || 64K smartchip || Returns proper info with at+cimi 
+|-
+| 63698 || G  ||  3003 || 64K smartchip || registers with FreeRunner right out of the box (2007.2)
 |-
 | 63698 || G  ||  3004 || 64K smartchip || Returns proper info with at+cimi 
 |-
