/* Software: Additional features */

--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -893,7 +893,15 @@ The ability to clone and store sim cards internally as soft sims and be able to 
 
 === Charging Alarm ===
 
-An alarm that sounds when the charger is removed to enable safe charging in public places, such as back packer dorm rooms. The alarm could have a pin for extra security and even have a silent mode where it acts dead and emails gps coordinates periodically.
+An alarm program with a pin to allow safe charging in public places. Two possible modes.
+
+==== Public Space Alarm ====
+
+An alarm that sounds when the charger is removed to enable safe charging in public places, such as back packer dorm rooms.
+
+==== Silent Alarm =====
+
+A silent mode where it acts dead and emails gps coordinates periodically.
 
 ==Bluetooth==
 
