--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -895,13 +895,13 @@ The ability to clone and store sim cards internally as soft sims and be able to 
 
 An alarm program with a pin to allow safe charging in public places. Two possible modes.
 
-==== Public Space Alarm ====
+==== Public Space Alarm Mode ====
 
 An alarm that sounds when the charger is removed to enable safe charging in public places, such as back packer dorm rooms.
 
-==== Silent Alarm =====
+==== Silent Alarm Mode ====
 
-A silent mode where it acts dead and emails gps coordinates periodically.
+A silent mode where it acts dead and sms/emails GPS coordinates periodically.
 
 ==Bluetooth==
 
