Fixed link for external u-boot site

--- a/Openmoko_developer_guide.mw
+++ b/Openmoko_developer_guide.mw
@@ -54,7 +54,7 @@ This page describes how to start your Openmoko development plan - how to prepare
 *[[U-boot|Bootloader]]
 *[[Bootloader_commands|Bootloader Command]]
 *[[Bootloader_environment|Bootloader Environment]]
-*[http://www.denx.de/wiki/UBoot u-boot]
+*[http://www.denx.de/wiki/U-Boot/WebHome u-boot]
 *[[Bootloader versions]]
 *[[NetBSD]]
 
