*Empty MediaWiki Message*

--- a/Hammerhead%2FProtocol.mw
+++ b/Hammerhead%2FProtocol.mw
@@ -1,4 +1,4 @@
-Hammerhead is the GPS receiver chip used in the Neo 1973. The only way currently to use it is via a closed-source binary program. This page describes efforts to write an open source driver. (Mostly abandoned since the release of the Neo Freerunner which uses a different chipsset) 
+Hammerhead is the GPS receiver chip used in the Neo 1973. The only way currently to use it is via a closed-source binary program. This page describes efforts to write an open source driver. (Mostly abandoned since the release of the Neo Freerunner which uses a different chipset) 
 
 == Repository ==
 
