--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -69,6 +69,8 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 |-
 | NXP PN532 (NFC Solution) || No, Waiting for answer || NA || NA || NA
 |-
+| NXP BGT215 and BGT216 (DVB-H) || NA || NA || NA || [http://esemiconductor.com/acrobat_download/literature/9397/75015522.pdf]
+|-
 | NA || NA || NA || NA || NA
 |-
 |}
