--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -71,7 +71,7 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 |-
 | NXP BGT215 and BGT216 (DVB-H) || NA || NA || NA || [http://esemiconductor.com/acrobat_download/literature/9397/75015522.pdf]
 |-
-| NA || NA || NA || NA || NA
+| Broadcom BCM2940 (DVB-H&T)  || NA || NA || Small chip dimension and highly integration || [http://zh-tw.broadcom.com/products/Cellular/Mobile-TV-Receivers/BCM2940]
 |-
 |}
 
