--- a/Debian.mw
+++ b/Debian.mw
@@ -11,8 +11,14 @@ and make it wake up again with pressing the power button.
 
 [[User:Wuth|Wuth]] 06:28, 17 August 2008 (UTC): I found that apmd was already installed by using the official debian installation procedure, but that the kernel didn't support apm.  I haven't yet resolved this issue.
 
-== Time zone ==
+== Time ==
 
 The default time zone is UTC.  Reconfigure it by running
 
  # tzconfig
+
+I've set the clock manual using, e.g.
+
+ # date -s 00:33
+
+but I believe I'll probably have to set up ntp at some point.
