--- a/Debian.mw
+++ b/Debian.mw
@@ -15,10 +15,11 @@ and make it wake up again with pressing the power button.
 
 The default time zone is UTC.  Reconfigure it by running
 
- # tzconfig
+ # dpkg-reconfigure tzdata
 
-I've set the clock manual using, e.g.
+Set the clock manual using, e.g.
 
  # date -s 00:33
 
-but I believe I'll probably have to set up ntp at some point.
+That's probably not sufficient to keep the clock accurate.
+It might be worth configuring some form of NTP.
