--- a/Debian.mw
+++ b/Debian.mw
@@ -2,6 +2,13 @@
 There are official instructions on how to install Debian on http://wiki.debian.org/DebianOnFreeRunner, and the [http://lists.linuxtogo.org/pipermail/smartphones-standards/2008-August/000232.html announcement].
 
 Previous, partly now outdated information on how to install Debian manually has been moved to [[Manual Debian]].
+== ssh ==
+
+As with the standard OpenMoko distribution, you can ssh into the device over USB using
+ $ ssh root@192.168.0.202
+The password is blank.  You should change it right away
+ # passwd
+
 == Suspend ==
 To make suspend available you have to install apmd:
  apt-get install apmd
