--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -97,7 +97,7 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 {|border=1 cellspacing=0
 ! Chip/Module !!Freedom Requirements !! Bussiness Requirements !! Technical Requirements !! Specs
 |-
-| Audience A1010 || No, waiting for answer(Aug.12.2008) || NA  || NA || NA
+| Audience A1010 || No, waiting for answer(Aug.12.2008) || NA  || NA || [http://www.audience.com/product.html]
 |-
 |}
 
