--- a/Debian.mw
+++ b/Debian.mw
@@ -57,5 +57,6 @@ Set the clock manual using, e.g.
 
  # date -s 00:33
 
-That's probably not sufficient to keep the clock accurate.
-It might be worth configuring some form of NTP.
+
+Issues:
+* That's probably not sufficient to keep the clock accurate.  It might be worth configuring some form of NTP.
