--- a/Debian.mw
+++ b/Debian.mw
@@ -9,7 +9,7 @@ As with the standard OpenMoko distribution, you can ssh into the device over USB
 The password is blank.  You should change it right away
  # passwd
 
-== wireless ==
+== wifi ==
 
 You can set up the wireless connection to your home router.
 Assuming your wireless router uses WPA security and DHCP:
