--- a/Debian.mw
+++ b/Debian.mw
@@ -35,6 +35,7 @@ You can determine your IP address by running
 
 Issues:
 * only works if in presence of wireless network on boot, or when manually running <code>ifup eth0</code>
+* booting away from wireless network is slower because waits for DHCP to time out
 * does not reestablish connection when leaving wireless area and then returning
 * does not support multiple wireless networks or open hotspots that you may travel between
 
