--- a/Debian.mw
+++ b/Debian.mw
@@ -46,7 +46,9 @@ After that you can suspend your phone with:
  apm -s
 and make it wake up again with pressing the power button.
 
-[[User:Wuth|Wuth]] 06:28, 17 August 2008 (UTC): I found that apmd was already installed by using the official debian installation procedure, but that the kernel didn't support apm.  I haven't yet resolved this issue.
+
+Issues:
+* [[User:Wuth|Wuth]] 06:28, 17 August 2008 (UTC): I found that apmd was already installed by using the official debian installation procedure, but that the kernel didn't support apm.  I haven't yet resolved this issue.
 
 == Time ==
 
