--- a/Debian.mw
+++ b/Debian.mw
@@ -63,3 +63,9 @@ Set the clock manual using, e.g.
 
 Issues:
 * That's probably not sufficient to keep the clock accurate.  It might be worth configuring some form of NTP.
+
+== Tangogps ==
+
+Tangogps is a very nice GPS mapping application.  The latest version is available in Debian.
+
+Unfortunately it depends on gpsd which conflicts with frameworkd in fso-frameworkd.
