--- a/Debian.mw
+++ b/Debian.mw
@@ -4,10 +4,19 @@ There are official instructions on how to install Debian on http://wiki.debian.o
 Previous, partly now outdated information on how to install Debian manually has been moved to [[Manual Debian]].
 == ssh ==
 
-As with the standard OpenMoko distribution, you can ssh into the device over USB using
+As with the standard Openmoko distribution, you can ssh into the device over USB using
  $ ssh root@192.168.0.202
 The password is blank.  You should change it right away
  # passwd
+
+For testing programs running on the Openmoko's display but invoked remotely, you need to specify the display.  E.g.
+ # DISPLAY=:0 tangogps
+
+For debugging, you may want to have some programs run on the Openmoko but display on your remote display.  To do that, install:
+ # apt-get install xauth
+
+And connect using:
+ $ ssh -X root@192.168.0.202
 
 == wifi ==
 
