--- a/Wicd.mw
+++ b/Wicd.mw
@@ -12,3 +12,6 @@ The wicd daemon should automatically be started after installation. You can star
 In Preferences you should give in: eth0 for wireless and usb0 for wired connection.
 
 Wicd should show now your networks. Connecting to one of them is not working at the moment. You will always end up with "Putting down interface..." and nothing happens after that but work is in progress about this problem: [http://wicd.net/punbb/viewtopic.php?id=132 click].
+
+
+[[Category:WLAN]]
