/* Instructions which worked for me */  added dependency, capitalized

--- a/Configuring_the_boot_splash_screens.mw
+++ b/Configuring_the_boot_splash_screens.mw
@@ -12,16 +12,17 @@ Use [[dfu-util]] to send to the Openmoko.
 === Instructions which worked for me ===
 The above instruction did not work, unfortunately, maybe there were for a previous release of u-boot. The following did work for me:
 
-* install the appropriate tools
-** download the README and the Perl script from http://svn.openmoko.org/developers/werner/splash/
+* Install the appropriate tools
+** Download the README and the Perl script from http://svn.openmoko.org/developers/werner/splash/
 ** chmod a+rx *.pl 
+** Be sure to have netpbm installed
 
-* how to use the tools
-** first, make a PNG 480x640x8 (or just get the original picture from http://wiki.openmoko.org/images/c/c2/), and name it System_boot.png
-** convert the System_boot.png into a compressed converted image file splash.gz, then download it to the splash partition (the net1973 must be in u-boot mode, and you need dfu-util)
+* How to use the tools
+** First, make a PNG 480x640x8 (or just get the original picture from http://wiki.openmoko.org/images/c/c2/), and name it System_boot.png
+** Convert the System_boot.png into a compressed converted image file splash.gz, then download it to the splash partition (the net1973 must be in u-boot mode, and you need dfu-util)
 *** ./imghs.pl | gzip -9 > splash.gz
 *** sudo ../bin/dfu-util -a splash -R -D splash.gz
-** if the size of splash.gz is not exactly 0x5000, please see the next section.
+** If the size of splash.gz is not exactly 0x5000, please see the next section.
 
 === Modifying the size of the compressed splash image ===
 NOTE... the README states you must issue two U-Boot commands to enable the flashed splash image to appear on the screen at boot:
