--- a/Debian.mw
+++ b/Debian.mw
@@ -97,5 +97,7 @@ path = /dev/null
 
 Start tangogps like this:
 
- # dbus-send --system --dest=org.freesmartphone.odeviced /org/freesmartphone/Device/PowerControl/GPS org.freesmartphone.Device.PowerControl.SetPower boolean:true
+ # echo 1 >/sys/devices/platform/s3c2440-i2c/i2c-adapter/i2c-0/0-0073/neo1973-pm-gps.0/pwron
+Turns the GPS on.
+
  # DISPLAY=:0 tangogps
