--- a/Setting_Date_and_Time.mw
+++ b/Setting_Date_and_Time.mw
@@ -44,6 +44,8 @@ Here is a link from the community mailing list for using hwclock with the [[ASU]
 
 Presumably it might also be possible to use gpspipe (or something else) to set the date once you have a gps fix?  In addition, the phone stack should set the date, time, and timezone once connected to a network.
 
+[GPS Sight|http://projects.openmoko.org/projects/gpv/] has a button to sync the hardware clock to the gps clock.
+
 [[Category:Documentation|Date and Time]]
 [[Category:Guides|Date and Time]]
 [[Category:Preferences|Date and Time]]
