*Empty MediaWiki Message*

--- a/Phone_Development.mw
+++ b/Phone_Development.mw
@@ -1,6 +1,9 @@
 Openmoko is still developing new phones. Each phone has an internal name before it's reaches it's final status. Here you can follow the development for nearby.
 
-== GTA04 (future)==
+== HXD8 (future) ==
+{{Main|HXD8}}
+
+== GTA04 (future) ==
 
 The fourth Openmoko planned, GTA04, will be based on a different system-on-a-chip.
 
