--- a/Setting_Date_and_Time.mw
+++ b/Setting_Date_and_Time.mw
@@ -40,11 +40,13 @@ Note: if you run the [[ASU]] image, hwclock will not work. Instead you can use:
 Here is a link from the community mailing list for using hwclock with the [[ASU]] image
 :http://lists.openmoko.org/pipermail/community/2008-July/023849.html
 
+== Setting the date/time automatically with gps ==
+
+[http://projects.openmoko.org/projects/gpv/ GPS Sight] has a button to sync the hardware clock to the gps clock.
+
 == Future Work ==
 
 Presumably it might also be possible to use gpspipe (or something else) to set the date once you have a gps fix?  In addition, the phone stack should set the date, time, and timezone once connected to a network.
-
-[http://projects.openmoko.org/projects/gpv/ GPS Sight] has a button to sync the hardware clock to the gps clock.
 
 [[Category:Documentation|Date and Time]]
 [[Category:Guides|Date and Time]]
