--- a/Debian.mw
+++ b/Debian.mw
@@ -87,6 +87,9 @@ Edit <code>/etc/frameworkd.conf</code>.  In the section <code>[ogpsd]<code>, edi
 path = /dev/null
 </pre>
 
+Reboot to enable this configuration.
+* '''Issue:'''  Is there an easier way?
+
  # gpsd-reconfigure gpsd
 
 * Start gpsd automatically no boot? Yes.
@@ -95,9 +98,18 @@ path = /dev/null
 ** not certain what this answer should be
 * Options to gpsd: none
 
+
 Start tangogps like this:
 
  # echo 1 >/sys/devices/platform/s3c2440-i2c/i2c-adapter/i2c-0/0-0073/neo1973-pm-gps.0/pwron
 Turns the GPS on.
 
  # DISPLAY=:0 tangogps
+
+
+'''Issues:'''
+* The different daemons for the reading GPS data mean that both tangogps and the framework demo GPS application can't be configured to work at the same time.  Reboots are probably necessary when switching between them.
+** Both gpsd and the framework publish GPS data through dbus, though with different interfaces.  This suggests a number of possible solutions.
+*** gpsd or the framework could implement the other's interface (along with their own).
+*** the framework could have an option to read data from gpsd.
+*** tangogps could be extended to read data from the framework.
