--- a/Setting_Date_and_Time.mw
+++ b/Setting_Date_and_Time.mw
@@ -44,6 +44,12 @@ Here is a link from the community mailing list for using hwclock with the [[ASU]
 
 [http://projects.openmoko.org/projects/gpv/ GPS Sight] has a button to sync the hardware clock to the gps clock.
 
+First you have to make sure gps works on you neo. You can do that by following the next steps [[Getting_Started_with_your_Neo_FreeRunner#Use_the_GPS]].
+
+The second step is to install GPS Sight:
+
+#opkg install http://projects.openmoko.org/frs/download.php/227/gpssight_0.8.4_freerunner.armv4t.ipk
+
 == Future Work ==
 
 Presumably it might also be possible to use gpspipe (or something else) to set the date once you have a gps fix?  In addition, the phone stack should set the date, time, and timezone once connected to a network.
