/* Setting the date/time automatically with gps */  Finiched the gpssight part

--- a/Setting_Date_and_Time.mw
+++ b/Setting_Date_and_Time.mw
@@ -44,11 +44,13 @@ Here is a link from the community mailing list for using hwclock with the [[ASU]
 
 [http://projects.openmoko.org/projects/gpv/ GPS Sight] has a button to sync the hardware clock to the gps clock.
 
-First you have to make sure gps works on you neo. You can do that by following the next steps [[Getting_Started_with_your_Neo_FreeRunner#Use_the_GPS]].
+First you have to make sure gps works on you neo. You can do that by following the steps in the [[Getting_Started_with_your_Neo_FreeRunner#Use_the_GPS]].
 
 The second step is to install GPS Sight:
 
 #opkg install http://projects.openmoko.org/frs/download.php/227/gpssight_0.8.4_freerunner.armv4t.ipk
+
+The last step is the actual syncing of the clock. For this, simply run the GPS Sight program from the main menu, wait for it to find the gps time and click the button labeled "Sync clock".
 
 == Future Work ==
 
