--- a/Setting_Date_and_Time.mw
+++ b/Setting_Date_and_Time.mw
@@ -54,7 +54,7 @@ The last step is the actual syncing of the clock. For this, simply run the GPS S
 
 == Future Work ==
 
-Presumably it might also be possible to use gpspipe (or something else) to set the date once you have a gps fix?  In addition, the phone stack should set the date, time, and timezone once connected to a network.
+Presumably it might also be possible to use gpspipe (or something else) to set the date once you have a gps fix automatically?  In addition, the phone stack should set the date, time, and timezone once connected to a network.
 
 [[Category:Documentation|Date and Time]]
 [[Category:Guides|Date and Time]]
