--- a/TangoGPS.mw
+++ b/TangoGPS.mw
@@ -16,6 +16,13 @@ If opkg complains about not being able to acquire a lock, try:
 
   pkill packagekit
 
+To get gpsd working on the Freerunner you have to change the configuration accoring to [[Gpsd#GPS_on_GTA02]].
+Then start gpsd by:
+
+  /etc/init.d/gpsd start
+
+Now you must power up the GPS-chip by opening the "Settings" application and setting the GPS entry to "on". Now you can run tangoGPS and wait until it get's a GPS fix. This can take up to a few minutes.
+
 I think TangoGPS may have started working after I followed the instructions to get GPRS working with GSM multiplexing here: [[Manually_using_GPRS#Option_1:_With_GSM_multiplexing_and_with_a_GUI]]
 
 There are steps included in those instructions to improve GPS performance.  The great thing is that once you get GPRS working, you can roam with TangoGPS running and have it download maps as needed over the GPRS connection!
