--- a/TangoGPS.mw
+++ b/TangoGPS.mw
@@ -1,6 +1,8 @@
 {{Languages|TangoGPS}}
 TangoGPS is a map application which can utilize Neo's built-in GPS to show your current location.
 
+[[Image:TangoGPS1.jpg]]
+
 Website: http://www.tangogps.org
 
 == Running tangoGPS on OM2008.8 ==
@@ -23,7 +25,7 @@ Then start gpsd by:
 
 Now you must power up the GPS-chip by opening the "Settings" application and setting the GPS entry to "on". Now you can run tangoGPS and wait until it get's a GPS fix. This can take up to a few minutes.
 
-== Downloading Maps offline use ==
+== Downloading Maps for offline use ==
 tangoGPS can bunch-download the map images so you don't need an internet connection while walking around. By default tangoGPS stores downloaded maps to /tmp/. This folder is lost every time you reboo the device. But you can use the "Config" tab within tangoGPS to change the "Cache Dir" location to , for example, /osm/ . So downloaded maps will be kept in the Neos flash, also after reboot. Unfortunately this configruation is lot every time you restart tangoGPS. So every time you start tangoGPS you have to go to this Config tab and set the correct location.
 
 Once you have set the location to a non-volatile path, you can connect your Neo to the internet by USB or WiFi at home and start downloading the maps of your area. Tap the map screen and select "map download". Now on-the-road  tangoGPS will be able to show you maps in different zoom levels even though you are not connected to the inet.
